# python-log-formatter

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
remote_log_formatter/: __init__.py  __main__.py
tests/: test_formatter.py
